Fix layout issue of excerpt link

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -206,9 +206,6 @@
       height: 100%
       margin-top: 0
 
-.article-more-link
-  clear: both
-
 .article-more-link a
   display: inline-block
   line-height: 1em
